--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:locale" content="ja-JP" />
     <title>Search repos</title>
     <link rel="stylesheet" href="assets/css/import.css" />
   </head>
